--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.8.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "vue": "^2.5.16"
   }
 }
