--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "fs-extra": "^6.0.0",
     "jquery": "^3.3.1",
+    "monaco-editor": "^0.12.0",
     "popper.js": "^1.14.3",
     "vue": "^2.5.16"
   }
