--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.3.1",
     "monaco-editor": "^0.12.0",
     "popper.js": "^1.14.3",
+    "robotjs": "^0.5.1",
     "vue": "^2.5.16"
   }
 }
