--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron": "^1.8.4"
   },
   "dependencies": {
+    "adm-zip": "^0.4.11",
     "fs-extra": "^6.0.0",
     "monaco-editor": "^0.12.0",
     "popper.js": "^1.14.3",
