--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "adm-zip": "^0.4.11",
     "fs-extra": "^6.0.0",
+    "keyboardjs": "^2.4.1",
     "monaco-editor": "^0.12.0",
     "popper.js": "^1.14.3",
     "robotjs": "^0.5.1"
