--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "Jeremy Alvarez",
   "license": "MPL-2.0",
   "devDependencies": {
-    "electron": "^1.8.7",
-    "electron-rebuild": "^1.7.3"
+    "electron": "^1.8.7"
   },
   "dependencies": {
     "adm-zip": "^0.4.11",
